# Drug-Discovery-Pipeline

CLAUDE/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  config.py  load_env.py  main.py  pipeline_architecture.txt  pyproject.toml  requirements.txt  setup.cfg  startup.md  test_and_check_filetree.txt  test_setup.md
CLAUDE/.github/workflows/: ci.yml
CLAUDE/.github/workflows/tests/: conftest.py  test_agents.py  test_config.py  test_docking.py  test_helpers.py  test_molecule_generator.py  test_synthesis_checker.py
CLAUDE/agents/: __init__.py  docking_evaluator.py  hypothesis.py  molecule_designer.py  planner.py  report_compiler.py  retriever.py  synthesis_evaluator.py
CLAUDE/scripts/: check_environment.sh  setup_conda_env.sh
CLAUDE/tools/: __init__.py  docking.py  literature_search.py  molecule_generator.py  patent_search.py  synthesis_checker.py  target_lookup.py
CLAUDE/utils/: __init__.py  helpers.py  prompts.py
DEEP_SEEK/: config.py
GLM/: Readme.md  config.py  main.py  requirements.txt
GLM/agents/: __init__.py  docking_evaluator.py  hypothesis.py  molecule_designer.py  planner.py  report_compiler.py  retriever.py  synthesis_evaluator.py
GLM/chroma_store/: chroma.sqlite3
GLM/outputs/: proposal_Alzheimer_s_disease_20260525_103557.md
GLM/tools/: __init__.py  docking.py  literature_search.py  molecule_generator.py  patent_search.py  synthesis_checker.py  target_lookup.py
GLM/utils/: __init__.py  helpers.py  prompts.py
