# drug_discovery_pipeline/pyproject.toml
# =============================================================================
# FILE: pyproject.toml
# ROLE: Modern Python project metadata and tool configuration.
#       Defines project metadata, dev dependencies, and tool settings
#       for black, isort, mypy, pytest, and ruff.
# =============================================================================

[build-system]
requires      = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name            = "drug-discovery-pipeline"
version         = "0.1.0"
description     = "End-to-end AI drug discovery pipeline powered by local Ollama LLMs"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [
    { name = "imil", email = "imil@example.com" },
]
keywords = [
    "drug-discovery", "cheminformatics", "llm", "ollama",
    "molecular-docking", "rdkit", "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "feedparser>=6.0.10",
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
]
pdf = [
    "weasyprint>=60.0",
    "markdown>=3.5.0",
]
retrosynthesis = [
    # "aizynthfinder>=4.0.0",  # install separately; needs specific deps
]

[project.scripts]
drug-discovery = "main:main"

[project.urls]
Homepage   = "https://github.com/imil/drug-discovery-pipeline"
Repository = "https://github.com/imil/drug-discovery-pipeline"
Issues     = "https://github.com/imil/drug-discovery-pipeline/issues"

# ---------------------------------------------------------------------------
# setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where   = ["."]
include = ["agents*", "tools*", "utils*"]

# ---------------------------------------------------------------------------
# black  (code formatter)
# ---------------------------------------------------------------------------
[tool.black]
line-length    = 88
target-version = ["py310", "py311", "py312"]
include        = '\.pyi?$'
exclude        = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | outputs
  | workdir
  | chroma_db
)/
'''

# ---------------------------------------------------------------------------
# isort  (import sorter)
# ---------------------------------------------------------------------------
[tool.isort]
profile                   = "black"
line_length               = 88
known_first_party         = ["agents", "tools", "utils", "config"]
known_third_party         = ["openai", "chromadb", "rdkit", "requests", "pydantic"]
sections                  = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
combine_as_imports        = true

# ---------------------------------------------------------------------------
# ruff  (fast linter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 88
target-version = "py310"
exclude        = [
    ".git", ".venv", "venv", "build", "dist",
    "__pycache__", "outputs", "workdir", "chroma_db",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (black handles it)
    "B008",  # do not perform function calls in default arguments
    "B904",  # raise from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # unused imports in __init__ are OK

# ---------------------------------------------------------------------------
# mypy  (type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true   # rdkit stubs not always available
exclude                = ["venv", ".venv", "build", "dist", "outputs"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths       = ["tests"]
python_files    = ["test_*.py", "*_test.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
addopts         = "-v --tb=short --cov=. --cov-report=term-missing"
filterwarnings  = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:chromadb",
]
log_cli         = true
log_cli_level   = "INFO"