# drug_discovery_pipeline/setup.cfg
# =============================================================================
# FILE: setup.cfg
# ROLE: Legacy setuptools configuration kept for compatibility with older tools.
#       pyproject.toml is the canonical source; this mirrors key settings.
# =============================================================================

[metadata]
name             = drug-discovery-pipeline
version          = 0.1.0
description      = End-to-end AI drug discovery pipeline powered by local Ollama LLMs
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
author           = imil
python_requires  = >=3.10

[options]
packages         = find:
package_dir      = .
zip_safe         = False

[options.packages.find]
exclude =
    tests*
    venv*
    .venv*
    outputs*
    workdir*
    chroma_db*

[flake8]
max-line-length = 88
extend-ignore   = E203, E501, W503
exclude         =
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist,
    outputs,
    workdir,
    chroma_db